@@ -6,8 +6,13 @@ addons:
 language: perl
 perl:
   - "5.16"
+env:
+  global:
+    - DNAP_UTILITIES_VERSION="0.5.0"
 before_install:
   - cpanm --quiet --notest Alien::Tidyp
+  - cpanm --no-lwp --notest https://github.com/wtsi-npg/perl-dnap-utilities/releases/download/${DNAP_UTILITIES_VERSION}/WTSI-DNAP-Utilities-${DNAP_UTILITIES_VERSION}.tar.gz
+  - cpanm --installdeps --notest .
 before_script:
   - mysql -e 'create database npgt;'
 env:
