@@ -1,9 +1,10 @@
 use strict;
 use warnings;
 use lib 'lib';
-use npg_tracking::util::build;
 
-my $class = npg_tracking::util::build->subclass(code => <<'EOF');
+use WTSI::DNAP::Utilities::Build;
+
+my $class = WTSI::DNAP::Utilities::Build->subclass(code => <<'EOF');
 
  sub dir_files {
     my $dir = shift;
@@ -85,10 +86,14 @@ my $builder = $class->new(
 
           'configure_requires' => {
                 'ExtUtils::CBuilder'              => 0,
+                'Module::Build'                   => '>= 0.42',
           },
 
           'build_requires' => {
                 'ExtUtils::CBuilder'              => 0,
+                'DateTime::Duration'              => 0,
+                'DateTime::Format::SQLite'        => 0,
+                'IO::File'                        => 0,
                 'IPC::Open2'                      => 0,
                 'Test::Compile'                   => 0,
                 'Test::Distribution'              => 0,
@@ -105,9 +110,7 @@ my $builder = $class->new(
                 'Perl::Critic::Policy::Subroutines::ProhibitUnusedPrivateSubroutines' => 0,
                 'Test::Trap'                      => '0.2.0',
                 'Test::Warn'                      => '0.11',
-                'DateTime::Duration'              => 0,
-                'DateTime::Format::SQLite'        => 0,
-                'IO::File'                        => 0,
+                'WTSI::DNAP::Utilities'           => '>= 0.5.0',
           },
 
           'requires'    => {
