@@ -338,17 +338,17 @@ lib/npg_tracking/data/snv/find.pm
 lib/npg_tracking/data/transcriptome.pm
 lib/npg_tracking/data/transcriptome/find.pm
 lib/npg_tracking/glossary/composition.pm
+lib/npg_tracking/glossary/composition/component.pm
+lib/npg_tracking/glossary/composition/component/illumina.pm
+lib/npg_tracking/glossary/composition/factory.pm
+lib/npg_tracking/glossary/composition/factory/rpt.pm
+lib/npg_tracking/glossary/composition/serializable.pm
 lib/npg_tracking/glossary/flowcell.pm
 lib/npg_tracking/glossary/lane.pm
 lib/npg_tracking/glossary/rpt.pm
 lib/npg_tracking/glossary/run.pm
 lib/npg_tracking/glossary/subset.pm
 lib/npg_tracking/glossary/tag.pm
-lib/npg_tracking/glossary/composition/component.pm
-lib/npg_tracking/glossary/composition/component/illumina.pm
-lib/npg_tracking/glossary/composition/factory.pm
-lib/npg_tracking/glossary/composition/factory/rpt.pm
-lib/npg_tracking/glossary/composition/serializable.pm
 lib/npg_tracking/illumina/run.pm
 lib/npg_tracking/illumina/run/folder.pm
 lib/npg_tracking/illumina/run/folder/location.pm
@@ -421,6 +421,7 @@ lib/st/api/sample.pm
 lib/st/api/study.pm
 MANIFEST			This list of files
 README
+t/.npg/npg_tracking
 t/.npg/t-magic-connection
 t/.npg/t-magic-connection2
 t/.npg/t-magic-connection3
@@ -473,11 +474,11 @@ t/10-model-usergroup.t
 t/10-model.t
 t/10-npg_testing-db.t
 t/10-npg_testing-html.t
-t/10-npg_tracking-glossary-composition.t
 t/10-npg_tracking-glossary-composition-component-illumina.t
 t/10-npg_tracking-glossary-composition-component.t
-t/10-npg_tracking-glossary-composition-factory.t
 t/10-npg_tracking-glossary-composition-factory-rpt.t
+t/10-npg_tracking-glossary-composition-factory.t
+t/10-npg_tracking-glossary-composition.t
 t/10-npg_tracking-glossary-rpt.t
 t/10-npg_tracking-status.t
 t/10-npg_tracking-util-config.t
@@ -561,10 +562,10 @@ t/36-npg_tracking-monitor-status.t
 t/40-st-base.t
 t/40-st-batch.t
 t/40-st-event.t
-t/40-st-lims.t
 t/40-st-lims-insert_size.t
 t/40-st-lims-mlwarehouse.t
 t/40-st-lims-samplesheet.t
+t/40-st-lims.t
 t/40-st-project.t
 t/40-st-sample.t
 t/40-st-study.t
@@ -601,14 +602,6 @@ t/data/cbot/cBot1/GetRunList.xml
 t/data/cbot/cBot1/InstrumentStatus.xml
 t/data/cbot/cBot1/RunInfo/091111_OEM-0B6VO7E14KH_0001.xml
 t/data/cbot/cBot2/InstrumentStatus.xml
-t/data/fixtures_lims_wh/00-IseqRunStatusDict.yml
-t/data/fixtures_lims_wh/000-Sample.yml
-t/data/fixtures_lims_wh/000-Study.yml
-t/data/fixtures_lims_wh/100-IseqFlowcell.yml
-t/data/fixtures_lims_wh/100-IseqRunLaneMetric.yml
-t/data/fixtures_lims_wh/100-IseqRunStatus.yml
-t/data/fixtures_lims_wh/100-StudyUser.yml
-t/data/fixtures_lims_wh/200-IseqProductMetric.yml
 t/data/dbic_fixtures/000-Designation.yml
 t/data/dbic_fixtures/000-EntityType.yml
 t/data/dbic_fixtures/000-InstrumentStatusDict.yml
@@ -672,6 +665,14 @@ t/data/fixtures/400-run_status.yml
 t/data/fixtures/400-tag_run.yml
 t/data/fixtures/400-tag_run_lane.yml
 t/data/fixtures/500-st_cache.yml
+t/data/fixtures_lims_wh/00-IseqRunStatusDict.yml
+t/data/fixtures_lims_wh/000-Sample.yml
+t/data/fixtures_lims_wh/000-Study.yml
+t/data/fixtures_lims_wh/100-IseqFlowcell.yml
+t/data/fixtures_lims_wh/100-IseqRunLaneMetric.yml
+t/data/fixtures_lims_wh/100-IseqRunStatus.yml
+t/data/fixtures_lims_wh/100-StudyUser.yml
+t/data/fixtures_lims_wh/200-IseqProductMetric.yml
 t/data/gaii/Events.log
 t/data/gaii/Events.Update
 t/data/gaii/ftp/Find_Me
@@ -1729,6 +1730,136 @@ t/data/test45/st/studies/297.xml
 t/data/test45/st/studies/333.xml
 t/data/test45/st/studies/365.xml
 t/data/test45/st/studies/700.xml
+t/data/gaii/ftp/Runs/100611_IL2_0022/Data/Intensities/.gitignore
+t/data/gaii/ftp/Runs/100611_IL2_mb110610/.gitignore
+t/data/gaii/ftp/Runs/100628_IL2_04929/Data/.gitignore
+t/data/gaii/ftp/Runs/this_is_not_a_run/.gitignore
+t/data/gaii/staging/IL12/incoming/100721_IL12_05222/Data/Intensities/L001/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C1.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C10.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C11.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C12.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C13.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C14.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C15.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C16.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C17.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C18.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C19.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C2.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C20.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C21.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C22.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C23.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C24.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C25.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C26.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C27.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C28.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C29.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C3.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C30.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C31.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C32.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C33.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C34.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C35.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C36.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C37.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C4.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C5.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C6.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C7.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C8.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L001/C9.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L002/C1.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L002/C3.1/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L003/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L004/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L005/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L006/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L007/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/Intensities/L008/.gitignore
+t/data/gaii/staging/IL3/incoming/100622_IL3_01234/Data/reports/.gitignore
+t/data/gaii/staging/IL3/skip_this_one/090810_IL12_3289/.gitignore
+t/data/gaii/staging/IL4/incoming/101026_IL4_0095/.gitignore
+t/data/gaii/staging/IL5/incoming/100708_IL3_04998/.gitignore
+t/data/gaii/staging/IL5/incoming/100708_IL3_04999/Images/L001/.gitignore
+t/data/gaii/staging/IL5/incoming/not_a_valid_run_folder/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C1.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C10.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C11.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C12.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C13.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C14.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C15.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C16.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C17.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C18.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C19.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C2.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C20.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C21.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C22.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C23.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C24.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C25.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C26.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C27.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C28.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C29.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C3.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C30.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C31.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C32.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C33.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C34.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C35.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C36.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C37.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C38.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C39.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C4.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C40.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C41.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C42.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C43.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C44.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C45.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C46.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C47.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C48.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C49.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C5.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C50.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C51.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C52.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C53.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C54.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C6.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C7.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C8.1/.gitignore
+t/data/gaii/staging/IL999/incoming/100622_IL3_01234/Data/Intensities/L001/C9.1/.gitignore
+t/data/hiseq/ftp/Runs_D/.gitignore
+t/data/hiseq/ftp/Runs_E/100914_HS3_05281_A_205MBABXX/Images/L001/.gitignore
+t/data/hiseq/ftp/Runs_E/100914_HS3_05281_A_205MBABXX/Processed/L001/.gitignore
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/Bustard1.8.1a2_01-10-2010_RTA.2/GERALD_01-10-2010_RTA/archive/.gitignore
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L004/.gitignore
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L005/.gitignore
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L006/.gitignore
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L007/.gitignore
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L008/.gitignore
+t/data/repos/references/Clostridium_difficile/.gitignore
+t/data/repos/references/Human/fna_strain/all/bwa/.gitignore
+t/data/repos/references/Human/no_ref_strain/all/bwa/.gitignore
+t/data/repos1/references/Homo_sapiens/1000Genomes_hs37d5/all/bwa/.gitignore
+t/data/repos2/references2/Homo_sapiens/GRCh37_53/.gitignore
+t/data/repos2/references2/Homo_sapiens/NCBI36/.gitignore
+t/data/repos2/references2/Human_herpesvirus_4/EB1/.gitignore
+t/data/repos2/references2/NPD_Chimera/010203/.gitignore
+t/data/repos2/references2/NPD_Chimera/010302/.gitignore
+t/data/repos2/references2/PhiX/Illumina/.gitignore
+t/data/repos2/references2/PhiX/Sanger/.gitignore
 t/dbh.pm
 t/dbic_util.pm
 t/ftp_util.pm
@@ -1740,3 +1871,4 @@ wtsi_local/apache2.conf
 wtsi_local/envvars
 wtsi_local/httpd_sfweb.conf
 wtsi_local/httpd_vm.conf
+
